--- a/SLP_LocationApp/Info.plist
+++ b/SLP_LocationApp/Info.plist
@@ -20,6 +20,7 @@
 	</array>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Dongle-Regular.ttf</string>
 		<string>NotoSansKR-Medium.otf</string>
 		<string>NotoSansKR-Regular.otf</string>
 	</array>
